[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
coordinates = "0.3.1"
async-recursion = "1.1.1"
