[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-recursion = "1.1.1"
rayon = "1.10.0"
humanize-duration = "0.0.6"
nalgebra = "0.33.2"
image = "0.25.5"
