[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-recursion = "1.1.1"
rayon = "1.10.0"
humanize-duration = "0.0.6"
nalgebra = "0.33.2"
image = "0.25.5"
pathfinding = "4.12.0"
fast_paths = "1.0.0"
game-grid = "^0.1"
colored = "2.2.0"
petgraph = "0.6.5"

[dev-dependencies]
divan = "^0.1"
mry = "^0.10"
gag = "^1.0"

[features]
part2 = []
full_bench = []
